[tool.poetry]
name = "pandas_alt"
version = "0.1.0"
description = ""
authors = ["Mandar, Karhade <mandar.karhade@mckesson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
polars = "^0.13.8"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
