[tool.poetry]
name = "pandas_alt"
version = "0.1.0"
description = ""
authors = ["Mandar, Karhade <mandar.karhade@mckesson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
polars = "^0.13.8"
pyarrow = "^10.0.1"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
pandasgui = "^0.2.13"
typing-extensions = "^4.4.0"
sweetviz = "^2.1.4"
autopep8 = "^2.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter-nbextensions-configurator = "^0.6.1"
modin = "^0.17.1"
pandas = "1.5.2"
dask = "^2022.12.0"
distributed = "^2022.12.0"
bokeh = "2.4.3"
tweepy = "^4.12.1"
seaborn = "^0.12.1"
transformers = "^4.25.1"
torch = "^1.13.1"
jupytext = "^1.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
